﻿Solved problem that the user cannot input more than nine digits per number. The digits are counted per number and if the number has nine digits you cannot add more. If the result is too big (more than 9 digits) the font-size of the Display gets smaller. Fixed some smaller issues with the rounding. The point Buttont and added the image for the Back-Button. The Coding of the project is done (feature keyboardsupport) will be added sometime in the future.

--- a/styles.css
+++ b/styles.css
@@ -109,9 +109,19 @@
     box-shadow: none;
 }
 
+.Image_BackArrow {
+    height: 2rem;
+    width: 3rem;
+    position: relative;
+    right: 0.2rem;
+    top: 0.2rem;
+    
+}
+
 .button_Back, .button_point, .button_toMinus{
     background-color: rgb(255, 69, 0);
 }
+
 
 .button_Back:focus, .button_point:focus, .button_toMinus:focus {
     background-color: rgb(195, 69, 0);
